--- a/about.html
+++ b/about.html
@@ -10,12 +10,12 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<div id="shadow" class="layout-flex center-center as-column" onclick="removeShadow()">
+	<div id="shadow" class="layout-flex center-center as-column" onclick="goBack()">
 		<i class="zmdi zmdi-globe animated bounce infinite"></i>
 		<br>
 		<span class="animated infinite tada">loading....</span>
 	</div>
-	<i class="zmdi shadow-closer" onclick="removeShadow()"></i>
+	<i class="zmdi shadow-closer" onclick="goBack()"></i>
 	<header class="shadow-2dp">
 		<a href="javascript:void(0);" class="btn btn-flat header-btn" style="align-self: center;" onclick="toggleMenu()"><i class="zmdi zmdi-menu"></i></a>
 		<div class="logo"><a href="index.html">Computer Science IFM</a></div>
@@ -24,26 +24,210 @@
 		<div class="cover-photo placeholder-bg" style="height: 200px;"></div>
 		<ul>
 			<li><a href="index.html"><i class="zmdi zmdi-home"></i>Home</a></li>
-			<li class="active"><a href="#"><i class="zmdi zmdi-info-outline"></i>About us</a></li>
-			<li><a href="#"><i class="zmdi zmdi-collection-item"></i>Courses</a></li>
+			<li class="active"><a href="about.html"><i class="zmdi zmdi-info-outline"></i>About us</a></li>
+			<li><a href="courses.html"><i class="zmdi zmdi-collection-item"></i>Courses</a></li>
 			<li><a href="gallery.html"><i class="zmdi zmdi-collection-image"></i>Gallery</a></li>
 		</ul>
 	</nav>
 	<div id="main">
 		<div id="content">
 			<section class="placeholder-bg layout-flex as-column center-center">
-				<br>
-				<h1 style="font-size: 35px">About Us</h1>
-				<p style="padding: 10px; font-size: 23px">Here you will learn about just why this is the right place for you or your loved ones to be,Chro.</p>
-				<br><br>
+				<br><br><br>
+				<h1 style="font-size: 35px; margin-bottom: 0;">About Us</h1>
+				<p class="page-subheader">
+					The Computer science department was introduced at IFM in the year 2007. We have excelled in the provision of courses pertinent to the industry hence sending out quality graduates.
+				</p>
+				<br><br><br><br>
 			</section>
+			<br><br><br><br>
+			<section>
+				<div class="center-text-on-less-lg layout-flex v-center">
+					<div>
+						<h3 class="section-title">Courses</h3>
+						<span class="section-sub">5 samples</span>
+					</div>
+					<div class="layout-flex center-center" style="margin-left: auto; margin-right: 1px; font-size: 20px; ">
+						<a href="courses.html" class="btn btn-small orange">MORE</a>
+					</div>
+				</div>
+				<div class="row" style="margin-top: -20px;">
+					<div class="col col-3">
+						<div class="document rounded taupe text-center">
+							<i class="zmdi zmdi-storage"></i>
+							<p>Introduction to Database Design</p>
+							<a href="#">view more</a>
+						</div>
+					</div>
+					<div class="col col-3">
+						<div class="document rounded text-center">
+							<i class="zmdi zmdi-globe"></i>
+							<p>Introduction to Web Technologies</p>
+							<a href="#">view more</a>
+						</div>
+					</div>
+					<div class="col col-3">
+						<div class="document blue rounded text-center">
+							<i class="zmdi zmdi-devices"></i>
+							<p>Mobile &amp; Desktop App Development</p>
+							<a href="#">view more</a>
+						</div>
+					</div>
+					<div class="col col-3">
+						<div class="document red rounded text-center">
+							<i class="zmdi zmdi-toys"></i>
+							<p>Multimedia and Common Graphics</p>
+							<a href="#">view more</a>
+						</div>
+					</div>
+				</div>
+			</section>
+			<section>
+				<div class="center-text-on-less-lg">
+					<h3 class="section-title">Non teaching staff</h3>
+					<span class="section-sub">12 in total</span>
+				</div>
+
+				<div class="row" style="margin-top: 20px;">
+					<div class="col col-3">
+						<div class="card" data-caption="Dr. Igira">
+							<img src="images/dpf.jpg" alt="Dr Igira">
+							<div class="card-content">
+								<div class="layout-flex">
+									<div class="caption flex">
+										<h3 class="no-margin">Dr. Igira</h3>
+										<p class="no-margin">
+											Head of CS department
+										</p>
+									</div>
+									<div class="layout-flex end-end" style="width: 60px;">
+										<a href="javascript:void(0);">view</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<br><br>
+			<section>
+				<div class="center-text-on-less-lg">
+					<h3 class="section-title">Teaching staff</h3>
+					<span class="section-sub">30 in total</span>
+				</div>
+				<div class="row" style="margin-top: 20px;">
+					<div class="col col-3">
+						<div class="card" data-caption="Dr. Jaffary">
+							<img src="images/dp.jpg" alt="Dr Jaffary">
+							<div class="card-content">
+								<div class="layout-flex">
+									<div class="caption flex">
+										<h3 class="no-margin">Dr. Jaffary</h3>
+										<p class="no-margin">
+											Programming in C &amp; System Analysis and Design.
+										</p>
+									</div>
+									<div class="layout-flex end-end" style="width: 60px;">
+										<a href="javascript:void(0);">view</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col col-3">
+						<div class="card" data-caption="Dr. Lupiana">
+							<img src="images/dp.jpg" alt="Dr Lupiana">
+							<div class="card-content">
+								<div class="layout-flex">
+									<div class="caption flex">
+										<h3 class="no-margin">Dr. Lupiana</h3>
+										<p class="no-margin">
+											Web technologies &amp; Responsive Design
+										</p>
+									</div>
+									<div class="layout-flex end-end" style="width: 60px;">
+										<a href="javascript:void(0);">view</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+					<div class="col col-3">
+						<div class="card" data-caption="Dr. Omary Z.">
+							<img src="images/dpf.jpg" alt="Dr. Omary Z.">
+							<div class="card-content">
+								<div class="layout-flex">
+									<div class="caption flex">
+										<h3 class="no-margin">Mr. Omary Z.</h3>
+										<p class="no-margin">
+											Operating Systems
+										</p>
+									</div>
+									<div class="layout-flex end-end" style="width: 60px;">
+										<a href="javascript:void(0);">view</a>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</section>
+			<br><br>
+			<section id="schart">
+				<div id="success-chart" class="row">
+					<div class="col col-5">
+						<div class="center-text-on-less-lg" style="margin-top: px">
+							<h3 class="section-title">Success chart</h3>
+							<span class="section-sub">change year to see changes</span>
+						</div>
+						<br>
+						<select class="center-on-less-lg">
+							<option value="2007">Year 2007</option>
+							<option value="2008">Year 2008</option>
+							<option value="2009">Year 2009</option>
+							<option value="2010">Year 2010</option>
+							<option value="2011">Year 2011</option>
+							<option value="2012">Year 2012</option>
+							<option value="2013">Year 2013</option>
+							<option value="2014">Year 2014</option>
+							<option value="2015">Year 2015</option>
+						</select>
+						<br>
+						<div class="list" style="position: relative;">
+							<span class="section-sub">
+							Key:
+							<div class="list-item has-avatar-small">
+								<span class="avatar small" style="background: #00bcd4"></span>
+								<h3 style="font-size: 15px;">Employed</h3>
+								<p>Number of graduates who got employed</p>
+							</div>
+							<div class="list-item has-avatar-small">
+								<span class="avatar small" style="background: #cddc39"></span>
+								<h3 style="font-size: 15px;">Freelancers</h3>
+								<p>Graduates who are successfully freelancers</p>
+							</div>
+							<div class="list-item has-avatar-small">
+								<span class="avatar small" style="background: #f44336"></span>
+								<h3 style="font-size: 15px;">Unemployed</h3>
+								<p>Graduates who are still unemployed</p>
+							</div>
+						</span>
+						</div>
+
+					</div>
+					<canvas class="col col-7" style="height: inherit; background: #000; padding-bottom: 0">
+					</canvas>
+				</div>
+			</section>
+			<br>
 		</div>
 	</div>
+
 	<footer>
 		<div class="copyright">
 			Copyright &copy; BCS IFM 2016.
 		</div>
 	</footer>
 	<script src="js/scripts.js"></script>
+	<script src="js/about-page-scripts.js"></script>
 </body>
 </html>
