--- a/index.html
+++ b/index.html
@@ -10,12 +10,12 @@
 	<link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-	<div id="shadow" class="layout-flex center-center as-column" onclick="removeShadow()">
+	<div id="shadow" class="layout-flex center-center as-column" onclick="goBack()">
 		<i class="zmdi zmdi-globe animated bounce infinite"></i>
 		<br>
 		<span class="animated infinite tada">loading....</span>
 	</div>
-	<i class="zmdi shadow-closer" onclick="removeShadow()"></i>
+	<i class="zmdi shadow-closer" onclick="goBack()"></i>
 	<header class="shadow-2dp">
 		<a href="javascript:void(0);" class="btn btn-flat header-btn" style="align-self: center;" onclick="toggleMenu()"><i class="zmdi zmdi-menu"></i></a>
 		<div class="logo"><a href="#">Computer Science IFM</a></div>
@@ -23,9 +23,9 @@
 	<nav class="shadow-2dp last">
 		<div class="cover-photo placeholder-b" style="height: 200px;"></div>
 		<ul>
-			<li class="active"><a href="#"><i class="zmdi zmdi-home"></i>Home</a></li>
+			<li class="active"><a href="index.html"><i class="zmdi zmdi-home"></i>Home</a></li>
 			<li><a href="about.html"><i class="zmdi zmdi-info-outline"></i>About</a></li>
-			<li><a href="#"><i class="zmdi zmdi-collection-item"></i>Courses</a></li>
+			<li><a href="courses.html"><i class="zmdi zmdi-collection-item"></i>Courses</a></li>
 			<li><a href="gallery.html"><i class="zmdi zmdi-collection-image"></i>Gallery</a></li>
 		</ul>
 	</nav>
